--- a/experience.html
+++ b/experience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="FR-fr">
 
 <head>
     <title>Scotty | Experience</title>
@@ -158,7 +158,7 @@
                     <div class="dropdown px-md-5 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__fadeInUp animate__delay-1s">
                         <h2 class="main-heading mb-0 experience_head">Mon <span class="my_experience">Experience</span></h2>
                         <p class="pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
-                            Nothing ever becomes real 'til it is experienced.― John Keats
+                            Rien ne devient jamais réel jusqu'à ce qu'il soit expérimenté
                         </p>
                     </div>
                 </div>
@@ -173,6 +173,8 @@
             <!-- Dynamic experience Card -->
 
         </main>
+    
+ 
     </div>
 
     <div class="main1 pt-1">
@@ -230,6 +232,19 @@
             }
         });
      </script>
+
+        <center>
+
+            <a href="CV/SCOTTY QUESNOT CV.pdf"><img class="fit-picture" src="cv.png" alt="image pour le cv" width="200" height="200"></a>
+            <a href="Rapport_de_stage_BTS_SIO_-_Scotty_QUESNOT.pdf"><img class="fit-picture2" src="report.png" alt="rapport de stage 1 " width="200" height="200"></a>
+            <a href="Rapport de stage 2SIO Scotty Quesnot.pdf"><img class="fit-picture3" src="report.png" alt="rapport de stage 2" width="200" height="200"></a>
+            <a href=""><img class="fit-picture4" src="certificat2.png" alt="image pour le certficat de stage" width="200" height="200"></a>
+            <a href=""><img class="fit-picture5" src="certificat2.png" alt="image pour le certficat de stage" width="200" height="200"></a>
+
+
+        </center>
+
+
 </body>
 
 </html>
