--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Fr-fr">
 
 <head>
     <title>Scotty | Projet</title>
@@ -288,9 +288,9 @@ add
               </svg>
                     </div>
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
-                        <h2 class="main-heading mb-0 projects_head">My <span class="my_projects">Projects</span></h2>
+                        <h2 class="main-heading mb-0 projects_head">Mes <span class="my_projects">Projets</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            My projects makes use of vast variety of latest technology tools. My best experience is to create Data Science projects and deploy them to web applications using cloud infrastructure.
+                            Mes projets sont libres de droits.
                         </p>
                     </div>
                 </div>
