--- a/education.html
+++ b/education.html
@@ -284,10 +284,8 @@
         <div>
             <h2>Lycée ORT Lyon</h2>
             <h6>BTS SIO, Service informatique aux organisations</h6>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li>    </li>
+            <p style="color: wheat;">Je suis actuellement en BTS Services Informatiques aux Organisations (SIO) option SLAM à l'école ORT LYON 8. Celui-ci étant une formation informatique nous apprenant à inover dans ce domaine ainsi que dans le domaine réseau. Il fait suite à mon BAC STI2D spécialité SIN.</p>
+            
         </div>
       </div>
    </div> 
@@ -361,7 +359,7 @@
 
     <!--MOOCs Cards-->
     <div id="mooc" class="container-fluid">
-        <h4 class="text-center pb-2 pt-5" data-aos="fade-up" data-aos-delay="300">Online <span class="edu_background">Accreditations</span></h4>
+        
         <div class="row moocs">
             <!-- Dynamic MOOCs Cards -->
         </div>
