--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     </div>
     <center>
         <!-- Home Section -->
-        <div class="text col-sm-6" style="margin-top: 140px;">Bonjour, <span class="wave"></span>&nbsp; Je suis <span class="header">QUESNOT Scotty</span>
+        <div class="text col-sm-6" style="margin-top: 140px;">Bonjour,<span class="wave"></span>&nbsp; Je suis <span class="header">QUESNOT Scotty</span>
             <div class="center">
                 <div>
                     <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
-                <span style="display: inline;">Je suis un étudiant en informatique<span class="animated-text"
+                <span style="display: inline;">Étudiant en informatique<span class="animated-text"
                     data-words=""></span>
                 </span>
                 <div>
