--- a/education.html
+++ b/education.html
@@ -303,10 +303,8 @@
         <div class="alignment">
             <h3>Baccalauréat STI2D</h3>
             <h6>Sciences et technologies de l'industrie et du développement durable</h6>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <p style="color: aliceblue;">J'ai effectué un bac STi2d option Système d'Information Numérique (SIN). Ce bac avait pour spécifité de nous enseinger la traversale ainsi que l'industrie et le développement durable. Nous avions en plus des cours sur la base du codage en front.</p>
+
         </div>
       </div>
 
