--- a/research.html
+++ b/research.html
@@ -61,7 +61,7 @@
                     <div class="col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="main-heading mb-0 head-upper research_head">Mes <span class="research_work">Loisirs</span></h2>
                         <p class="pre-heading p-upper font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            Mes centres d'intêrets sont le sport, les jeux vidéos, la crytomonnaie.
+                            Mes centres d'intêrets sont le sport, la technologie, la cryptomonnaie, les jeux vidéos.
                         </p>
                     </div>
 
