--- a/education.html
+++ b/education.html
@@ -13,6 +13,13 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
+    <meta property="og:site_name" content="">
+    <meta property="og:title" content="Scotty Quesnot">
+    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="">
 
     <meta name="application-name" content="Scotty Quesnot" />
     <meta name="apple-mobile-web-app-title" content="Scotty Quesnot" />
@@ -296,10 +303,8 @@
         <div class="alignment">
             <h3>Baccalauréat STI2D</h3>
             <h6>Sciences et technologies de l'industrie et du développement durable</h6>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <p style="color: aliceblue;">J'ai effectué un bac STi2d option Système d'Information Numérique (SIN). Ce bac avait pour spécifité de nous enseinger la traversale ainsi que l'industrie et le développement durable. Nous avions en plus des cours sur la base du codage en front.</p>
+
         </div>
       </div>
 
